--- a/MainProgram/AddProcForm.lfm
+++ b/MainProgram/AddProcForm.lfm
@@ -1,99 +1,108 @@
 object fAddProcForm: TfAddProcForm
   Left = 406
+  Height = 496
   Top = 119
+  Width = 856
   BorderStyle = bsSingle
   Caption = 'Add process'
   ClientHeight = 496
   ClientWidth = 856
   Color = clBtnFace
-  Font.Charset = DEFAULT_CHARSET
   Font.Color = clWindowText
   Font.Height = -11
   Font.Name = 'Tahoma'
-  Font.Style = []
-  Position = poMainFormCenter
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  PixelsPerInch = 96
+  Position = poMainFormCenter
+  LCLVersion = '1.6.4.0'
   object blvMainHorSplitTop: TBevel
     Left = 8
+    Height = 9
     Top = 56
     Width = 841
-    Height = 9
-    Anchors = [akLeft, akTop, akRight]
+    Anchors = [akTop, akLeft, akRight]
     Shape = bsTopLine
   end
   object lblRunningProcs: TLabel
     Left = 8
+    Height = 13
     Top = 64
     Width = 94
-    Height = 13
     Caption = 'Running processes:'
+    ParentColor = False
   end
   object lblLoading: TLabel
     Left = 800
+    Height = 1
     Top = 64
-    Width = 3
-    Height = 13
+    Width = 1
+    ParentColor = False
   end
   object blvMainHorSplitBottom: TBevel
     Left = 7
+    Height = 9
     Top = 456
     Width = 841
-    Height = 9
     Anchors = [akLeft, akRight, akBottom]
     Shape = bsTopLine
   end
   object leProcessName: TLabeledEdit
     Left = 8
+    Height = 21
     Top = 24
     Width = 816
-    Height = 21
-    Anchors = [akLeft, akTop, akRight]
-    EditLabel.Width = 70
+    Anchors = [akTop, akLeft, akRight]
+    EditLabel.AnchorSideLeft.Control = leProcessName
+    EditLabel.AnchorSideRight.Control = leProcessName
+    EditLabel.AnchorSideRight.Side = asrBottom
+    EditLabel.AnchorSideBottom.Control = leProcessName
+    EditLabel.Left = 8
     EditLabel.Height = 13
+    EditLabel.Top = 8
+    EditLabel.Width = 816
     EditLabel.Caption = 'Process name:'
+    EditLabel.ParentColor = False
     TabOrder = 0
     OnKeyPress = leProcessNameKeyPress
   end
   object btnBrowse: TButton
     Left = 824
+    Height = 21
     Top = 24
     Width = 25
-    Height = 21
     Anchors = [akTop, akRight]
     Caption = '...'
-    TabOrder = 1
     OnClick = btnBrowseClick
+    TabOrder = 1
   end
   object lvRunningProcesses: TListView
     Left = 8
+    Height = 337
     Top = 80
     Width = 841
-    Height = 337
-    Anchors = [akLeft, akTop, akRight, akBottom]
-    Columns = <
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    Columns = <    
       item
         Caption = 'Process'
         Width = 150
-      end
+      end    
       item
         Alignment = taRightJustify
         Caption = 'Bits'
         Width = 55
-      end
+      end    
       item
         Alignment = taRightJustify
         Caption = 'PID'
-      end
+      end    
       item
         Caption = 'Description'
         Width = 220
-      end
+      end    
       item
         Caption = 'Company name'
         Width = 200
-      end
+      end    
       item
         Caption = 'Path'
         Width = 140
@@ -105,61 +114,63 @@ object fAddProcForm: TfAddProcForm
     SmallImages = imglIcons
     TabOrder = 2
     ViewStyle = vsReport
+    OnColumnClick = lvRunningProcessesColumnClick
+    OnCompare = lvRunningProcessesCompare
     OnDblClick = lvRunningProcessesDblClick
     OnDeletion = lvRunningProcessesDeletion
     OnResize = lvRunningProcessesResize
   end
   object btnRefresh: TButton
     Left = 664
+    Height = 25
     Top = 424
     Width = 185
-    Height = 25
     Anchors = [akRight, akBottom]
     Caption = 'Refresh list of running processes'
-    TabOrder = 4
     OnClick = btnRefreshClick
+    TabOrder = 4
   end
   object cbShowAll: TCheckBox
     Left = 8
-    Top = 428
-    Width = 169
     Height = 17
+    Top = 428
+    Width = 164
     Anchors = [akLeft, akBottom]
     Caption = 'Show limited-access processes'
-    TabOrder = 3
     OnClick = cbShowAllClick
+    TabOrder = 3
   end
   object btnCancel: TButton
     Left = 760
+    Height = 25
     Top = 464
     Width = 89
-    Height = 25
     Anchors = [akRight, akBottom]
     Caption = 'Cancel'
-    TabOrder = 6
     OnClick = btnCancelClick
+    TabOrder = 6
   end
   object btnAccept: TButton
     Left = 664
+    Height = 25
     Top = 464
     Width = 89
-    Height = 25
     Anchors = [akRight, akBottom]
     Caption = 'Accept'
-    TabOrder = 5
     OnClick = btnAcceptClick
+    TabOrder = 5
   end
   object diaBrowse: TOpenDialog
     Filter = 'Executable binary (*.exe)|*.exe|All files (*.*)|*.*'
-    Left = 760
+    left = 760
   end
   object tmrLoadingTimer: TTimer
     Enabled = False
     Interval = 500
     OnTimer = tmrLoadingTimerTimer
-    Left = 792
+    left = 792
   end
   object imglIcons: TImageList
-    Left = 824
+    left = 824
   end
 end
